Trying to fix the overflow problem.

--- a/css/style.css
+++ b/css/style.css
@@ -902,6 +902,9 @@ a#aToolTipCloseBtn{display:block;height:20px;width:20px;overflow:hidden;backgrou
 
 /* Mobile Design-------------------------------------------- */
 @media only screen and (max-device-width: 600px) {
+	html {
+		overlow: hidden;
+	}
 	html, body {
 		overflow-x: hidden;
 	}
